# graphicsProjectS8

./: .gitignore  CMakeLists.txt  cuboid.cpp  cuboid_solid_script.cpp  line.cpp  line.h  lineScript.cpp  lineSegmentTest.cpp  lineTest.cpp  plane.cpp  plane.h  planeScript.cpp  planeTest.cpp  point.cpp  point.h  pointScript.cpp  solid.cpp  solid.h  solidTest.cpp  solid_main.cpp  square_based_pyramid.cpp  square_based_pyramid.h  triangle.cpp  triangle.h  triangleScript.cpp  triangleTest.cpp
src/: cuboid.h  line.cpp  line.h  lineSegment.cpp  lineSegment.h  plane.cpp  point.h  solid.cpp  solid.h  triangle.cpp  triangle.h
